# weighted-f-free-edge-editing

./: .gitignore  .gitmodules  CMakeLists.txt  FillVersionH.cmake  LICENSE  README.md  Snakefile
.github/workflows/: ci.yml
apps/: run_finder_benchmark.cpp  run_fpt_experiment.cpp  run_fptsolver.cpp  run_ilpsolver.cpp  run_instance_converter.cpp  run_instance_packing_problem.cpp  run_instance_to_yaml_converter.cpp  run_lower_bound_benchmark.cpp  run_lower_bound_inspection.cpp  run_templated_subgraph_test.cpp  run_templated_vs_legacy_subgraph_test.cpp  run_tests.cpp
apps/benchmarks/: run_lower_bound_benchmark.cpp
apps/legacy/: run_legacy_finder_benchmark.cpp
apps/tests/: run_tests.cpp
cmake/: FillVersionH.cmake
cmake/modules/: FindGUROBI.cmake  FindLSSWZ_MWIS.cmake  FindNPS_MWIS.cmake
data/: .gitignore  artificial.yaml  bio-C4P4-subset.yaml  bio-subset-A.yaml  bio-subset-B.yaml  bio-unweighted.yaml  bio.yaml  generate_metadata.py  graph_io.py  grass_web.metis.graph  misc.yaml  prepare.py  presentation.graph
data/misc/: lesmis.graph
data/test/: bio-nr-3-size-16.graph  bio-nr-4-size-39.graph
notebooks/: 09 evaluation.ipynb  10 lower bound inspection.ipynb  Split-Graph-and-Split-Cluster-Editing.ipynb  Untitled.ipynb  figure-finders.ipynb  figure-solution-visualization-as-graph.ipynb  figure-subgraph-packing.ipynb  finder-benchmark-analysis.ipynb  finder-benchmark-snakemake-script.ipynb  graph-generators-networkit.ipynb  graph-generators.ipynb  graph-stats.ipynb  graph-visualization.ipynb  lower-bound-benchmark-analysis.ipynb  search-strategy.ipynb  solution-space-analysis.ipynb  solved-by-time-curve.ipynb  solved-by-x-changed.ipynb  stat-analysis-draft.ipynb  total-enumeration-analysis.ipynb  upper_bound_on_packing_lower_bounds.ipynb  utils.py
notebooks/figures/: figure-finder-benchmark-draft.ipynb  figure-finders-example.ipynb  figure-graph-atlas.ipynb  figure-rules.ipynb  figure-small-editing-example.ipynb  figure-subgraph-packing.ipynb  figures-bio-solutions-n-size-cost.ipynb  figures-calls-analysis.ipynb
scripts/: .gitignore  compute_metadata.py  download_dataset.py  generate_dataset.py  generate_dataset_subset.py  generate_dataset_unweighted.py  generate_metadata.py  graph_io.py  load_solutions.py  pace_time_all.py  pace_to_graph.py  run_fpt_experiment_01.py
scripts/analysis/: finders.py  solutions.py
scripts/figures/: dataset_atlas.py  lower_bound.py  small_graphs.py
scripts/peace/: peace.py
src/: Bound.h  Configuration.cpp  Configuration.h  Editor.h  Edits.h  FPTSolver.h  GraphStatistics.h  ILPSolver.h  Instance.h  Permutation.h  Solution.h  Solver.h  Statistics.h  definitions.h  ilpsolver.cpp  main.cpp  options.cpp  options.h  version.h.in
src/consumer/: ConsumerI.h  SubgraphStats.h
src/editor/: EditState.h  Editor.h  VertexPairPreMarker.h
src/finder/: Center.cpp  Center.h  CenterC4P4.cpp  CenterC4P4.h  CenterP3.cpp  CenterP3.h  Endpoint.cpp  Endpoint.h  FinderI.h  Naive.cpp  Naive.h  NaiveC4P4.h  NaiveP3.cpp  NaiveP3.h  OuterP3.cpp  OuterP3.h  SplitCluster.cpp  SplitCluster.h  SplitGraph.cpp  SplitGraph.h  finder_utils.cpp  finder_utils.h  util.h  utils.h
src/finder/center/: find.h  find_near.h
src/finder/detail/: CenterFindImpl.cpp  CenterFindImpl.h  CenterFindNearImpl.cpp  CenterFindNearImpl.h  EndpointFindImpl.cpp  EndpointFindImpl.h  NaiveFindImpl.h
src/finder/iterators/: CenterC4P4Iter.cpp  CenterC4P4Iter.h
src/forbidden_subgraphs/: IndexPairIterator.h  IndexedVertexPairRange.h  Subgraph.h  SubgraphC4P4.h  SubgraphP3.h  subgraphs.h
src/graph/: BitMatrix.h  DynamicBitset.h  Graph.h  GraphIO.h  Subgraph.cpp  Subgraph.h  VertexMap.h  VertexPair.h  VertexPairMap.h  algorithms.h  synthetic_graphs.h
src/interfaces/: ConsumerI.h  FinderI.h  LowerBoundI.h  SelectorI.h
src/legacy/finder/: CenterC4P4.cpp  CenterC4P4.h  CenterP3.cpp  FinderI.h  NaiveC4P4.h  OuterP3.cpp  SplitCluster.cpp  SplitGraph.cpp  finder_utils.h
src/legacy/finder/detail/: CenterFindImpl.h  (+2 more)
src/legacy/graph/: Subgraph.h
src/legacy/tests/: FinderTests.h
src/lower_bound/: ExplicitMWISSolver.h  GlobalGreedyLowerBound.cpp  GlobalGreedyLowerBound.h  Greedy.cpp  Greedy.h  GreedyLowerBound.cpp  GreedyLowerBound.h  GreedyWeightedPacking.cpp  GreedyWeightedPacking.h  ILSMWISSolverLowerBound.cpp  ILSMWISSolverLowerBound.h  IteratedLocalSearch.h  LB_ARW.h  LB_Gurobi.hpp  LPRelaxation.h  LPRelaxationLowerBound.h  LSSWZ_MWIS_Solver.cpp  LSSWZ_MWIS_Solver.h  LSSWZ_MWIS_SolverLowerBound.cpp  LSSWZ_MWIS_SolverLowerBound.h  LinearProgramLowerBound.h  LocalGreedyLowerBound.cpp  LocalGreedyLowerBound.h  LocalSearch.cpp  LocalSearch.h  LocalSearchLowerBound.cpp  LocalSearchLowerBound.h  LowerBoundI.h  NPS_MWIS_Solver.cpp  NPS_MWIS_Solver.h  NPS_MWIS_SolverLowerBound.cpp  NPS_MWIS_SolverLowerBound.h  NoLowerBound.h  SortedGreedy.cpp  SortedGreedy.h  SortedGreedyLowerBound.cpp  SortedGreedyLowerBound.h  Trivial.cpp  Trivial.h  TrivialLowerBound.cpp  (+4 more)
src/lower_bound/gurobi/: GurobiLowerBound.cpp  GurobiLowerBound.h
src/lower_bound/weighted_packing/: WeightedPacking.h  WeightedPackingLocalSearch.h  WeightedPackingLocalSearch2.cpp  WeightedPackingLocalSearch2.h
src/search_strategy/: Exponential.h  ExponentialSearchStrategy.h  Fixed.h  FixedSearchStrategy.h  IncrementByConstValue.h  IncrementByMinCost.h  IncrementByMinCostSearchStrategy.h  IncrementByMultiplier.h  IncrementByMultiplierSearchStrategy.h  PrunedDelta.h  PrunedDeltaSearchStrategy.h  SearchStrategyI.h  search_strategy_utils.cpp  search_strategy_utils.h
src/selector/: FirstEditable.h  FirstFound.h  LeastWeight.h  Most.h  MostAdjacentSubgraphs.h  MostAdjacentSubgraphs_adapted.h  MostMarkedPairs.h  MostOrOneLeftSubgraph.h  Most_adapted.h  SelectorI.h  SingleEdgeEditing.h  lower_bound_utils.h  selector_utils.cpp  selector_utils.h
src/solvers/: FPTSolver.h  ILPSolver.h  Solver.h
src/tests/: AdjacencyTests.h  BitMatrixTests.h  EditorTests.cpp  EditorTests.h  FinderTTests.h  FinderTests.h  GraphTests.cpp  GraphTests.h  PermutationTest.h  RobinHoodTests.h  SubgraphTests.h  Tests.h  test_utils.cpp  test_utils.h
